- Add new section and editing general styles

--- a/src/components/sections/Areas.astro
+++ b/src/components/sections/Areas.astro
@@ -4,10 +4,10 @@ import Badge from "../ui/Badge.astro"
 
 <section id="areas" class="py-5 my-5">
     <header class="d-flex justify-content-center align-items-center flex-column text-center mb-4">
-        <h2 class="fw-bold col-6 mb-3">Lessons revolve around 4 areas</h2>
-        <p class="col-6">Diverse lessons around 4 subjects: Math, literature, English, drawing help children improve their comprehensive knowledge</p>
+        <h2 class="fw-bold col-12 col-md-6 col-lg-6 mb-3">Lessons revolve around 4 areas</h2>
+        <p class="col-12 col-md-6 col-lg-6">Diverse lessons around 4 subjects: Math, literature, English, drawing help children improve their comprehensive knowledge</p>
     </header>
-    <section class="d-flex justify-content-center align-items-center gap-5">
+    <section class="d-flex flex-wrap justify-content-center align-items-center gap-5">
         <Badge title="Math" icon="bi-grid" color="primary" />
         <Badge title="Literature" icon="bi-book-fill" color="warning" />
         <Badge title="English" icon="bi-translate" color="danger" />
