--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from '../layouts/Layout.astro';
 import Nav from '../components/sections/Nav.astro';
 import Header from '../components/sections/Header.astro';
 import Areas from '../components/sections/Areas.astro';
+import Studying from '../components/sections/Studying.astro';
 ---
 
 <Layout title="Home">
 	<Nav />
 	<Header />
 	<Areas />
+	<Studying />
 </Layout>
