--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -70,4 +70,9 @@ const { title } = Astro.props;
 		color: var(--color-text);
 		text-decoration: none;
 	}
+	ul {
+		list-style: none;
+		padding: 0;
+		margin: 0;
+	}
 </style>
